--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -945,3 +945,86 @@
     color: var(--text-color);
     text-transform: capitalize;
 }
+
+/* Banner */
+
+.banner {
+    margin-top: 30px;
+}
+
+.banner__row {
+    display: flex;
+    column-gap: 6px;
+}
+
+.banner__thumb {
+    height: 235px;
+    display: block;
+}
+
+.banner__link {
+    height: 100%;
+    display: block;
+}
+
+.banner__img {
+    height: 100%;
+    width: 100%;
+    border-radius: 4px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.banner__thumb:first-of-type {
+    flex: 2;
+}
+
+.banner__thumb--small {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.banner__thumb--small .banner__link {
+    height: calc(50% - 3px);
+}
+
+.banner__thumb--main {
+    position: relative;
+}
+
+.banner__thumb--main:hover .banner__control-btn {
+    opacity: 1;
+}
+
+.banner__control-btn {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    font-size: 3rem;
+    color: #fff;
+    width: 35px;
+    height: 60px;
+    background-color: rgba(0, 0, 0, 0.18);
+    border-radius: 2px;
+    padding: 0;
+    border: none;
+    cursor: pointer;
+    top: 50%;
+    transform: translateY(-50%);
+    opacity: 0;
+    transition: 0.3s;
+}
+
+.banner__control-btn:hover {
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+.banner__control-btn--left {
+    left: 0;
+}
+
+.banner__control-btn--right {
+    right: 0;
+}
