--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -198,6 +198,7 @@
     display: none;
     border-radius: 4px;
     width: 184px;
+    background-color: #fff;
     position: absolute;
     z-index: 1;
     left: 0;
@@ -612,6 +613,7 @@
     position: absolute;
     border-radius: 2px;
     box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.26);
+    z-index: 1;
 }
 
 .search-history__list {
