--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -13,6 +13,7 @@
     --bg-color-notify: #fff2ee;
     --bg-hover-notify: #f8f8f8;
     --primary-gradient: linear-gradient(#ee4d2d, #ff7337);
+    --main-bg-color: #f6f6f6;
     --width-container: 1200px;
     --height-header: 119px;
     --height-navbar: 34px;
