feat: home filter

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -19,6 +19,7 @@
     --height-navbar: 34px;
     --main-height-header: calc(var(--height-header) - var(--height-navbar));
     --gap-mobile: 20px;
+    --base-radius: 2px;
 }
 
 html {
@@ -28,6 +29,7 @@ html {
 body {
     font-size: 1.6rem;
     font-family: Montserrat, sans-serif;
+    background-color: var(--main-bg-color);
 }
 
 input,
@@ -115,8 +117,8 @@ a {
     padding: 0 15px;
     line-height: 34px;
     cursor: pointer;
-    color: #fff;
-    background-color: var(--primary-color);
+    color: var(--text-color);
+    background-color: #fff;
     font-size: 1.4rem;
     user-select: none;
     font-weight: 500;
@@ -124,4 +126,18 @@ a {
     outline: none;
     white-space: nowrap;
     border-radius: 2px;
+}
+
+.btn.primary {
+    color: #fff;
+    background-color: var(--primary-color);
+}
+
+.btn + .btn {
+    margin-left: 15px;
+}
+
+.row-center {
+    display: flex;
+    align-items: center;
 }
