--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -33,6 +33,16 @@
     .header-cart {
         width: unset;
     }
+
+    /* Home category on mobile */
+    .home-category__list--mobile {
+        display: flex;
+    }
+
+    /* Product item */
+    .product-item__name {
+        min-height: 30px;
+    }
 }
 
 /* Tablet 740px - 1023px */
@@ -43,6 +53,10 @@
 
     .hide-tablet {
         display: none;
+    }
+
+    .mobile-menu {
+        margin-left: -16px;
     }
 
     .header-cart {
@@ -164,5 +178,41 @@
 
     .banner__thumb {
         height: 200px;
+    }
+
+    .home-filter {
+        padding: 12px var(--gap-mobile);
+    }
+
+    .home-filter__sort {
+        column-gap: 12px;
+    }
+
+    .home-filter__sort .btn {
+        min-width: 70px;
+    }
+
+    .home-filter__sort .btn + .btn {
+        margin: 0;
+    }
+
+    .home-filter__sort .home-filter__sort-btn {
+        min-width: 100px;
+    }
+
+    .home-filter__dropdown-item--mobile {
+        display: block;
+    }
+
+    .home-product {
+        overflow: hidden;
+    }
+
+    .home-product__list {
+        padding: 0 var(--gap-mobile);
+    }
+
+    .home-category__list--mobile {
+        padding: 0 var(--gap-mobile);
     }
 }
