--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -26,6 +26,11 @@ html {
     font-size: 62.5%;
 }
 
+html,
+body {
+    scroll-behavior: smooth;
+}
+
 body {
     font-size: 1.6rem;
     font-family: Montserrat, sans-serif;
